# rsdocbot

./: Cargo.toml  README.md
src/: command.rs  db.rs  docs.rs  main.rs  path.rs
