[package]
name = "rsdocbot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
paradocs = { git = "https://github.com/kiwiyou/paradocs" }
pretty_env_logger = "0.4.0"
regex = "1.5.4"
serde_json = "1.0.70"
telbot-ureq = { git = "https://github.com/kiwiyou/telbot" }
ureq = "2.3.0"
url = "2.2.2"

[features]
